--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vapi-ai/web": "^2.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.9",
     "next-themes": "^0.4.6",
